--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -15,3 +15,10 @@
   background-position: 50%;
   background-size: contain;
 }
+
+.loggin-bg {
+  background-image: url("https://st3.depositphotos.com/1258191/16429/i/600/depositphotos_164297680-stock-photo-woman-purchasing-items-with-smartphone.jpg");
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: cover;
+}
