--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -22,3 +22,14 @@
   background-position: 50%;
   background-size: cover;
 }
+
+.product-form-bg {
+  background-image: url("https://www.valino.fr/wp-content/uploads/2022/04/rack-de-stockage-page-distribution.jpg");
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: cover;
+}
+
+input {
+  border-radius: 5px;
+}
